<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".DonasiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Donasiuang"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAzur"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittextstyle"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/activity_vertical_layout"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittextstyle"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah"
                android:layout_marginTop="@dimen/activity_vertical_layout"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"
                android:background="@drawable/edittextstyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_layout"
                android:text="@string/bayar"
                android:textColor="@color/colorWhite"
                android:background="@drawable/buttonstyle"/

        </LinearLayout>
    </LinearLayout>
</ScrollView>